# mint-ntf-raw

./: app.ts  build.sh  package-lock.json  package.json  utils.ts
mint/: Cargo.toml
mint/src/: lib.rs
